# multimodal_diffusion

./: .gitignore  README.md  multimodal_diffusion.py  pyproject.toml  requirements.txt
avdiff/datasets/: av_manifest.py
avdiff/models/: __init__.py  adapters.py  mmdt.py  schedules.py  tokenizers.py
avdiff/models/encoders/: audio_codec.py  vae_video3d.py
avdiff/models/eval/: audio_quality.py  av_sync.py  video_metrics.py
avdiff/models/heads/: __init__.py  noise_heads.py
avdiff/models/infer/: sample_clip.py  stream_infer.py
avdiff/models/train/: collate.py  losses.py  mask_schedule.py  train_joint.py  trainer.py
avdiff/utils/: io.py  ops.py  schedule_utils.py
configs/: README.md  a2v.yaml  mvp.yaml  mvp_mps.yaml  v2a.yaml  validate_config.py
data/GRID/: clips.json
data/video/GRID/raw/s2/s2/: bbbl9n.mpg  bbbm1p.mpg  bbbm2a.mpg  bbbmzs.mpg  bbbs3n.mpg  bbbs4s.mpg  bbbs5p.mpg  bbbs6a.mpg  bbbz7n.mpg  bbbz8s.mpg  bbbz9p.mpg  bbie7n.mpg  bbie8s.mpg  bbie9p.mpg  bbifza.mpg  bbil2s.mpg  bbil3p.mpg  bbil4a.mpg  bbir5n.mpg  bbir6s.mpg  bbir7p.mpg  bbir8a.mpg  bbiy9n.mpg  bbiz1p.mpg  bbiz2a.mpg  bbizzs.mpg  bbwf9n.mpg  bbwg1p.mpg  bbwg2a.mpg  bbwgzs.mpg  bbwm3n.mpg  bbwm4s.mpg  bbwm5p.mpg  bbwm6a.mpg  bbws8s.mpg  bbws9p.mpg  bgaa5n.mpg  bgaa6s.mpg  bgaa7p.mpg  bgaa8a.mpg  (+930 more)
data/video/GRID/raw/s3/s3/: bbbl8n.mpg  bbbl9s.mpg  bbbm1a.mpg  bbbmzp.mpg  bbbs2n.mpg  bbbs3s.mpg  bbbs4p.mpg  bbbs5a.mpg  bbbz6n.mpg  bbbz7s.mpg  bbbz8p.mpg  bbbz9a.mpg  (+967 more)
scripts/: extract_frames.py  preprocess_audio.py
tests/: smoke_train.py  test_shapes.py
tools/: build_grid_manifest.py
(+979 files in other folders)
